assets/css/style.css
/* CSS for overall website (index.html and resume.html) */
:root {
    --primary-color: rgb(255, 255, 255);
    --navigation: rgb(37, 182, 129);
    --outline: rgb(131, 81, 226);
}

* {
    margin: 0;
}

header {
    display: flex;
    justify-content: space-between;
    padding-top: 15px;
    background: rgb(0,142,255);
    background: linear-gradient(90deg, rgba(0,142,255,1) 0%, rgba(9,9,121,1) 50%, rgba(0,142,255,1) 100%);
    position: 50%;
    position: fixed;
    z-index: 9999;
    width: 100%;
}

header h1 { 
    padding-bottom: 15px; 
    color: var(--primary-color);
}

header nav ul {
    list-style: none;
    display: flex;
    padding-top: 8px;
    justify-content: space-between;
    font-size: 22px;
}

header nav ul a {
    padding: 15px 25px;
    text-decoration: none;
    color: var(--primary-color);
}

header nav ul a:hover {
    color: var(--primary-color);
    background: var(--navigation);
    border-radius: 25px;
    text-shadow: none;
}

header nav ul a:active {
    color: var(--navigation);
    background: var(--primary-color);
}

/* image = first section (keyboard pic) after header */
.image { 
    padding-bottom: 400px;
    position: relative;
    background-image: url("../images/image.jpg");
    background-size: 1350px 700px;
}

/* image img = avatar */
.image img {
    height: 90px;
    width: 90px;
    position: absolute;
    margin-top: 280px;
    margin-left: 1225px;
    border-radius: 50px;
    border: 5px solid rgb(41, 53, 205);
}

#about-me {
    padding-bottom: 420px;
    background: rgb(106,0,255);
    background: linear-gradient(45deg, rgba(106,0,255,1) 0%, rgba(9,121,93,1) 50%, rgba(106,0,255,1) 100%);
    position: relative;
    display: flex;
    justify-content: center;
}

#about-me p {
    font-size: 25px;
}

/* description = Hellow World explanation in "About Me" section */
.description {
    margin: auto;
    width: 40%;
    height: 65%;
    position: absolute;
    margin-top: 100px;
}

#work {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    position: relative;
    background: rgb(5,97,116);
    background: linear-gradient(290deg, rgba(5,97,116,1) 0%, rgba(7,121,80,1) 50%, rgba(5,97,116,1) 100%);
    padding-bottom: 150px;  
}

#work h2 {
    position: absolute;
}

/* built = built section */
.built {
    width: 40%;
    height: 400px;
    margin-top: 100px;
    font-size: 17px;
}

.built h4 {
    text-transform: uppercase;
}

.built text {
    text-transform: none;
}

.built h3, .built h4 {
    width: 420px;
}

.built img {
    height: 375px;
    margin-top: 15px;
}

.built img:hover {
    opacity: 0.5;
}

.built img:active {
    opacity: 1.0;
    border-color: var(--primary-color);
}

.built img {
    border: 4px solid var(--outline);
}

#contact-me {
    padding-bottom: 400px;
    background: rgb(106,0,255);
    background: linear-gradient(45deg, rgba(106,0,255,1) 0%, rgba(9,121,93,1) 50%, rgba(106,0,255,1) 100%);
    display: flex;
    justify-content: center; 
}

#contact-me p {
    font-size: 25px;
    text-align: left;
}

#contact-me ul li {
    font-size: 25px;
    text-align: left;
}

/* d-for-contact = child of contact-me section with purple space background */
.d-for-contact {
    background: rgb(5,97,116);
    background: linear-gradient(290deg, rgba(5,97,116,1) 0%, rgba(7,121,80,1) 50%, rgba(5,97,116,1) 100%);
    border: 4px solid rgb(5, 162, 81);
}

.d-for-contact ul li a {
    color: var(--primary-color);
}

.d-for-contact ul li a:hover {
    color: var(--outline);
}

.d-for-contact ul li a:active {
    color: #1B68DE;
}

.description p, .d-for-contact ul li {
    color: var(--primary-color);
}

#about-me, #work, #contact-me h2 {
    text-align: center;
    padding-top: 15px;
    font-size: 50px;
    color: var(--primary-color);
}

footer {
    padding-bottom: 40px;
    display: flex;
    justify-content: space-between;
    background: rgb(0,142,255);
    background: linear-gradient(90deg, rgba(0,142,255,1) 0%, rgba(9,9,121,1) 50%, rgba(0,142,255,1) 100%);
}

footer h2 {
    font-size: 20px;
    color: var(--primary-color);
}

/* copy = copyright section */
.copy {
    text-align: right;
    color: var(--primary-color);
}

/* iPad Pro (dimensions flipped) */
@media screen and (max-width: 1366px) {

    .image img {
        width: 20%;
        height: 60%;
        right: 40%;
        bottom: 10%;
        border: 10px solid rgb(41, 53, 205);
        border-radius: 40%;
    }

    .built img {
        width: 400px;
    }

    .d-for-contact {
        height: 30%;
    }

    .built img, .d-for-contact {
        border: 10px solid rgb(9, 18, 162);
    }

    .built img {
        border-color: var(--outline);;
    }

    .team text {
        margin-left: 5px;
        color: rgb(246, 243, 80);
    }

    .team img {
        border-color: rgb(5, 162, 81);
    }

    .team img:active {
        border-color: rgb(41, 53, 205);
    }
}

/* iPad Pro */
@media screen and (max-width: 1024px) { 
    
    .image img {
        width: 25%;
        right: 35%;
    }

    #about-me {
        padding-bottom: 52%;
    }

    .d-for-contact {
        height: 20%;
    }

    #contact-me {
        height: 10px;
    }

}

/* iPad */
@media screen and (max-width: 768px) {

    .image img {
        height: 50%;
        border-radius: 50%;
    }

    #about-me {
        padding-bottom: 95%;
    }

    .built img {
        width: 210%;
        height: 90%;
        margin-left: 43px;
    }

    .built h3, .built h4 {
        width: 650px;
        font-size: 30px;
    }

    #contact-me {
        padding-bottom: 50%;
    }

    footer h2 {
        font-size: 25px;
    }

    .copy {
        font-size: 20px;
    }

}

/* Surface Duo */
@media screen and (max-width: 540px) {

    header {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        position: relative;
        padding-bottom: 5%;
    }

    header nav ul {
        margin-right: 55px;
    }

    .image img {
        height: 40%;
    }

    #about-me {
        padding-bottom: 120%;
    }

    .description {
        width: 65%;
    }

    #work {
        padding-bottom: 20%;
    }

    .built {
        margin-top: 20%;
    }

    .built h3, .built h4 {
        width: 540px;
        font-size: 25px;
    }

    .built img {
       width: 170%;
       height: 90%;
       margin-left: 75px;
       position: relative;
    }
  
}

/* iPhone 6/7/8 Plus */
@media screen and (max-width: 414px) {

    .image img {
        margin-bottom: 15%;
        right: 31%;
        width: 35%;
    }

    #about-me {
        padding-bottom: 200%;
    }

    #contact-me {
        padding-bottom: 90%;
    }

    .d-for-contact {
        height: 30%;
        width: 75%;
    }

    footer h2 {
        font-size: 20px;
    }

    .copy {
        font-size: 15px;
    }

}

/* iPhone X */
@media screen and (max-width: 375px) {

    #about-me {
        padding-bottom: 250%;
    }

    .built h4 {
        font-size: 18px;
    }

    .built img {
        width: 165%;
        margin-left: 81px;
    }

    #contact-me {
        padding-bottom: 100%;
    }

    footer h2 {
        font-size: 18px;
    }
    
}

